--- a/jProject/WebContent/WEB-INF/showAllOwnProjects.jspf
+++ b/jProject/WebContent/WEB-INF/showAllOwnProjects.jspf
@@ -1,6 +1,6 @@
 <c:choose>
-	<c:when test="${sessionScope.loggedIn != null}">
-		<c:forEach items="${showAllOwnProjects}" var="project" varStatus="i">
+	<c:when test="${sessionScope.loggedIn == true}">
+		<c:forEach items="${sessionScope.showAllOwnProjects}" var="project" varStatus="i">
 			<a href="JProjectServlet?do=ShowProject&Name=${project.name}">${project.name}</a><br>
 		</c:forEach>
 	</c:when>
